Geracao_Codigo/src/sintaxe.output
Gramática

    0 $accept: program $end

    1 program: declarations
    2        | %empty

    3 declarations: declarations declaration
    4             | declaration

    5 declaration: function
    6            | varDecl PV
    7            | error

    8 $@1: %empty

    9 $@2: %empty

   10 function: funcDecl ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

   11 $@3: %empty

   12 $@4: %empty

   13 function: error ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C

   14 $@5: %empty

   15 function: funcDecl ABRE_P FECHA_P $@5 ABRE_C moreStmt FECHA_C

   16 $@6: %empty

   17 function: error ABRE_P FECHA_P $@6 ABRE_C moreStmt FECHA_C

   18 funcDecl: TIPO ID
   19         | TIPO LIST ID

   20 parameters: parameters VIRG varDecl
   21           | varDecl

   22 moreStmt: moreStmt block
   23         | block

   24 block: stmt
   25      | varDecl PV
   26      | ABRE_C moreStmt FECHA_C

   27 stmt: conditional
   28     | iteration
   29     | attribuition PV
   30     | io PV
   31     | ret PV
   32     | error

   33 conditional: IF ABRE_P attribuition FECHA_P bracesOrNot
   34            | IF ABRE_P attribuition FECHA_P bracesOrNot ELSE bracesOrNot
   35            | IF ABRE_P error FECHA_P bracesOrNot

   36 bracesOrNot: ABRE_C moreStmt FECHA_C
   37            | stmt

   38 iteration: FOR ABRE_P iteArgs FECHA_P bracesOrNot

   39 $@7: %empty

   40 iteration: FOR ABRE_P error $@7 FECHA_P bracesOrNot

   41 iteArgs: expIte PV expIte PV expIte

   42 expIte: attribuition
   43       | %empty

   44 io: ENTRADA ABRE_P ID FECHA_P
   45   | SAIDA ABRE_P expLogic FECHA_P
   46   | SAIDA ABRE_P STRING FECHA_P
   47   | ENTRADA ABRE_P error FECHA_P
   48   | SAIDA ABRE_P error FECHA_P

   49 varDecl: TIPO ID
   50        | TIPO LIST ID

   51 attribuition: ID ATRIB expLogic
   52             | expLogic

   53 expLogic: expLogic LOG_OP_OU andLogic
   54         | andLogic

   55 andLogic: andLogic LOG_OP_E expComp
   56         | expComp

   57 expComp: expComp REL_OP_BAIXA expRel
   58        | expRel

   59 expRel: expRel REL_OP_ALTA expList
   60       | expList

   61 expList: expList LIST_OP_BIN expArit
   62        | expList LIST_OP_CONSTRUTOR expArit
   63        | expArit

   64 expArit: expArit ARIT_OP_MAIS expMul
   65        | expArit ARIT_OP_MENOS expMul
   66        | expMul

   67 expMul: expMul ARIT_OP_ALTA expUn
   68       | expUn

   69 expUn: LOG_OP_NEG element
   70      | ARIT_OP_MENOS element
   71      | LIST_OP_UN element
   72      | LIST_OP_HEADER element
   73      | element

   74 element: ID
   75        | ABRE_P expLogic FECHA_P
   76        | ID ABRE_P arguments FECHA_P
   77        | ID ABRE_P FECHA_P
   78        | CONST_INT
   79        | CONST_FLOAT
   80        | NIL

   81 arguments: arguments VIRG expLogic
   82          | expLogic

   83 ret: RETURN expLogic


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 7 13 17 32 35 40 47 48
    IF <tok> (258) 33 34 35
    ELSE <tok> (259) 34
    FOR <tok> (260) 38 40
    RETURN <tok> (261) 83
    TIPO <tok> (262) 18 19 49 50
    LIST <tok> (263) 19 50
    ENTRADA <tok> (264) 44 47
    SAIDA <tok> (265) 45 46 48
    VIRG <tok> (266) 20 81
    PV <tok> (267) 6 25 29 30 31 41
    ATRIB <tok> (268) 51
    LOG_OP_OU <tok> (269) 53
    LOG_OP_E <tok> (270) 55
    REL_OP_BAIXA <tok> (271) 57
    REL_OP_ALTA <tok> (272) 59
    LIST_OP_BIN <tok> (273) 61
    LIST_OP_CONSTRUTOR <tok> (274) 62
    LIST_OP_UN <tok> (275) 71
    LIST_OP_HEADER <tok> (276) 72
    ARIT_OP_MAIS <tok> (277) 64
    ARIT_OP_MENOS <tok> (278) 65 70
    ARIT_OP_ALTA <tok> (279) 67
    LOG_OP_NEG <tok> (280) 69
    CONST_INT <tok> (281) 78
    CONST_FLOAT <tok> (282) 79
    STRING <tok> (283) 46
    NIL <tok> (284) 80
    ID <tok> (285) 18 19 44 49 50 51 74 76 77
    ABRE_P <tok> (286) 10 13 15 17 33 34 35 38 40 44 45 46 47 48 75 76 77
    FECHA_P <tok> (287) 10 13 15 17 33 34 35 38 40 44 45 46 47 48 75 76 77
    ABRE_C <tok> (288) 10 13 15 17 26 36
    FECHA_C <tok> (289) 10 13 15 17 26 36


Não terminais com as regras onde eles aparecem

    $accept (35)
        à esquerda: 0
    program (36)
        à esquerda: 1 2
        à direita: 0
    declarations <lista> (37)
        à esquerda: 3 4
        à direita: 1 3
    declaration <no> (38)
        à esquerda: 5 6 7
        à direita: 3 4
    function <no> (39)
        à esquerda: 10 13 15 17
        à direita: 5
    $@1 (40)
        à esquerda: 8
        à direita: 10
    $@2 (41)
        à esquerda: 9
        à direita: 10
    $@3 (42)
        à esquerda: 11
        à direita: 13
    $@4 (43)
        à esquerda: 12
        à direita: 13
    $@5 (44)
        à esquerda: 14
        à direita: 15
    $@6 (45)
        à esquerda: 16
        à direita: 17
    funcDecl <no> (46)
        à esquerda: 18 19
        à direita: 10 15
    parameters <no> (47)
        à esquerda: 20 21
        à direita: 10 13 20
    moreStmt <lista> (48)
        à esquerda: 22 23
        à direita: 10 13 15 17 22 26 36
    block <no> (49)
        à esquerda: 24 25 26
        à direita: 22 23
    stmt <no> (50)
        à esquerda: 27 28 29 30 31 32
        à direita: 24 37
    conditional <no> (51)
        à esquerda: 33 34 35
        à direita: 27
    bracesOrNot <no> (52)
        à esquerda: 36 37
        à direita: 33 34 35 38 40
    iteration <no> (53)
        à esquerda: 38 40
        à direita: 28
    $@7 (54)
        à esquerda: 39
        à direita: 40
    iteArgs <no> (55)
        à esquerda: 41
        à direita: 38
    expIte <no> (56)
        à esquerda: 42 43
        à direita: 41
    io <no> (57)
        à esquerda: 44 45 46 47 48
        à direita: 30
    varDecl <no> (58)
        à esquerda: 49 50
        à direita: 6 20 21 25
    attribuition <no> (59)
        à esquerda: 51 52
        à direita: 29 33 34 42
    expLogic <no> (60)
        à esquerda: 53 54
        à direita: 45 51 52 53 75 81 82 83
    andLogic <no> (61)
        à esquerda: 55 56
        à direita: 53 54 55
    expComp <no> (62)
        à esquerda: 57 58
        à direita: 55 56 57
    expRel <no> (63)
        à esquerda: 59 60
        à direita: 57 58 59
    expList <no> (64)
        à esquerda: 61 62 63
        à direita: 59 60 61 62
    expArit <no> (65)
        à esquerda: 64 65 66
        à direita: 61 62 63 64 65
    expMul <no> (66)
        à esquerda: 67 68
        à direita: 64 65 66 67
    expUn <no> (67)
        à esquerda: 69 70 71 72 73
        à direita: 67 68
    element <no> (68)
        à esquerda: 74 75 76 77 78 79 80
        à direita: 69 70 71 72 73
    arguments <lista> (69)
        à esquerda: 81 82
        à direita: 76 81
    ret <no> (70)
        à esquerda: 83
        à direita: 31


Estado 0

    0 $accept: • program $end

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 2 (program)

    program       ir ao estado 3
    declarations  ir ao estado 4
    declaration   ir ao estado 5
    function      ir ao estado 6
    funcDecl      ir ao estado 7
    varDecl       ir ao estado 8


Estado 1

    7 declaration: error •
   13 function: error • ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   17         | error • ABRE_P FECHA_P $@6 ABRE_C moreStmt FECHA_C

    ABRE_P  deslocar, e ir ao estado 9

    $end   reduzir usando a regra 7 (declaration)
    error  reduzir usando a regra 7 (declaration)
    TIPO   reduzir usando a regra 7 (declaration)


Estado 2

   18 funcDecl: TIPO • ID
   19         | TIPO • LIST ID
   49 varDecl: TIPO • ID
   50        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 10
    ID    deslocar, e ir ao estado 11


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 12


Estado 4

    1 program: declarations •
    3 declarations: declarations • declaration

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (program)

    declaration  ir ao estado 13
    function     ir ao estado 6
    funcDecl     ir ao estado 7
    varDecl      ir ao estado 8


Estado 5

    4 declarations: declaration •

    $end   reduzir usando a regra 4 (declarations)
    error  reduzir usando a regra 4 (declarations)
    TIPO   reduzir usando a regra 4 (declarations)


Estado 6

    5 declaration: function •

    $end   reduzir usando a regra 5 (declaration)
    error  reduzir usando a regra 5 (declaration)
    TIPO   reduzir usando a regra 5 (declaration)


Estado 7

   10 function: funcDecl • ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   15         | funcDecl • ABRE_P FECHA_P $@5 ABRE_C moreStmt FECHA_C

    ABRE_P  deslocar, e ir ao estado 14


Estado 8

    6 declaration: varDecl • PV

    PV  deslocar, e ir ao estado 15


Estado 9

   13 function: error ABRE_P • $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   17         | error ABRE_P • FECHA_P $@6 ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 16

    TIPO  reduzir usando a regra 11 ($@3)

    $@3  ir ao estado 17


Estado 10

   19 funcDecl: TIPO LIST • ID
   50 varDecl: TIPO LIST • ID

    ID  deslocar, e ir ao estado 18


Estado 11

   18 funcDecl: TIPO ID •
   49 varDecl: TIPO ID •

    PV      reduzir usando a regra 49 (varDecl)
    ABRE_P  reduzir usando a regra 18 (funcDecl)


Estado 12

    0 $accept: program $end •

    $padrão  aceitar


Estado 13

    3 declarations: declarations declaration •

    $end   reduzir usando a regra 3 (declarations)
    error  reduzir usando a regra 3 (declarations)
    TIPO   reduzir usando a regra 3 (declarations)


Estado 14

   10 function: funcDecl ABRE_P • $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   15         | funcDecl ABRE_P • FECHA_P $@5 ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 19

    TIPO  reduzir usando a regra 8 ($@1)

    $@1  ir ao estado 20


Estado 15

    6 declaration: varDecl PV •

    $end   reduzir usando a regra 6 (declaration)
    error  reduzir usando a regra 6 (declaration)
    TIPO   reduzir usando a regra 6 (declaration)


Estado 16

   17 function: error ABRE_P FECHA_P • $@6 ABRE_C moreStmt FECHA_C

    ABRE_C  reduzir usando a regra 16 ($@6)

    $@6  ir ao estado 21


Estado 17

   13 function: error ABRE_P $@3 • parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 22

    parameters  ir ao estado 23
    varDecl     ir ao estado 24


Estado 18

   19 funcDecl: TIPO LIST ID •
   50 varDecl: TIPO LIST ID •

    PV      reduzir usando a regra 50 (varDecl)
    ABRE_P  reduzir usando a regra 19 (funcDecl)


Estado 19

   15 function: funcDecl ABRE_P FECHA_P • $@5 ABRE_C moreStmt FECHA_C

    ABRE_C  reduzir usando a regra 14 ($@5)

    $@5  ir ao estado 25


Estado 20

   10 function: funcDecl ABRE_P $@1 • parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 22

    parameters  ir ao estado 26
    varDecl     ir ao estado 24


Estado 21

   17 function: error ABRE_P FECHA_P $@6 • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 27


Estado 22

   49 varDecl: TIPO • ID
   50        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 28
    ID    deslocar, e ir ao estado 29


Estado 23

   13 function: error ABRE_P $@3 parameters • FECHA_P $@4 ABRE_C moreStmt FECHA_C
   20 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 30
    FECHA_P  deslocar, e ir ao estado 31


Estado 24

   21 parameters: varDecl •

    VIRG     reduzir usando a regra 21 (parameters)
    FECHA_P  reduzir usando a regra 21 (parameters)


Estado 25

   15 function: funcDecl ABRE_P FECHA_P $@5 • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 32


Estado 26

   10 function: funcDecl ABRE_P $@1 parameters • FECHA_P $@2 ABRE_C moreStmt FECHA_C
   20 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 30
    FECHA_P  deslocar, e ir ao estado 33


Estado 27

   17 function: error ABRE_P FECHA_P $@6 ABRE_C • moreStmt FECHA_C

    error           deslocar, e ir ao estado 34
    IF              deslocar, e ir ao estado 35
    FOR             deslocar, e ir ao estado 36
    RETURN          deslocar, e ir ao estado 37
    TIPO            deslocar, e ir ao estado 162
    ENTRADA         deslocar, e ir ao estado 38
    SAIDA           deslocar, e ir ao estado 39
    LIST_OP_UN      deslocar, e ir ao estado 40
    LIST_OP_HEADER  deslocar, e ir ao estado 41
    ARIT_OP_MENOS   deslocar, e ir ao estado 42
    LOG_OP_NEG      deslocar, e ir ao estado 43
    CONST_INT       deslocar, e ir ao estado 44
    CONST_FLOAT     deslocar, e ir ao estado 45
    NIL             deslocar, e ir ao estado 46
    ID              deslocar, e ir ao estado 47
    ABRE_P          deslocar, e ir ao estado 48
    ABRE_C          deslocar, e ir ao estado 49

    moreStmt      ir ao estado 50
    block         ir ao estado 51
    stmt          ir ao estado 52
    conditional   ir ao estado 53
    iteration     ir ao estado 54
    io            ir ao estado 55
    varDecl       ir ao estado 56
    attribuition  ir ao estado 57
    expLogic      ir ao estado 58
    andLogic      ir ao estado 59
    expComp       ir ao estado 60
    expRel        ir ao estado 61
    expList       ir ao estado 62
    expArit       ir ao estado 63
    expMul        ir ao estado 64
    expUn         ir ao estado 65
    element       ir ao estado 66
    ret           ir ao estado 67


Estado 28

   50 varDecl: TIPO LIST • ID

    ID  deslocar, e ir ao estado 68


Estado 29

   49 varDecl: TIPO ID •

    VIRG     reduzir usando a regra 49 (varDecl)
    FECHA_P  reduzir usando a regra 49 (varDecl)


Estado 30

   20 parameters: parameters VIRG • varDecl

    TIPO  deslocar, e ir ao estado 22

    varDecl  ir ao estado 69


Estado 31

   13 function: error ABRE_P $@3 parameters FECHA_P • $@4 ABRE_C moreStmt FECHA_C

    ABRE_C  reduzir usando a regra 12 ($@4)

    $@4  ir ao estado 70


Estado 32

   15 function: funcDecl ABRE_P FECHA_P $@5 ABRE_C • moreStmt FECHA_C

    error           deslocar, e ir ao estado 34
    IF              deslocar, e ir ao estado 35
    FOR             deslocar, e ir ao estado 36
    RETURN          deslocar, e ir ao estado 37
    TIPO            deslocar, e ir ao estado 162
    ENTRADA         deslocar, e ir ao estado 38
    SAIDA           deslocar, e ir ao estado 39
    LIST_OP_UN      deslocar, e ir ao estado 40
    LIST_OP_HEADER  deslocar, e ir ao estado 41
    ARIT_OP_MENOS   deslocar, e ir ao estado 42
    LOG_OP_NEG      deslocar, e ir ao estado 43
    CONST_INT       deslocar, e ir ao estado 44
    CONST_FLOAT     deslocar, e ir ao estado 45
    NIL             deslocar, e ir ao estado 46
    ID              deslocar, e ir ao estado 47
    ABRE_P          deslocar, e ir ao estado 48
    ABRE_C          deslocar, e ir ao estado 49

    moreStmt      ir ao estado 71
    block         ir ao estado 51
    stmt          ir ao estado 52
    conditional   ir ao estado 53
    iteration     ir ao estado 54
    io            ir ao estado 55
    varDecl       ir ao estado 56
    attribuition  ir ao estado 57
    expLogic      ir ao estado 58
    andLogic      ir ao estado 59
    expComp       ir ao estado 60
    expRel        ir ao estado 61
    expList       ir ao estado 62
    expArit       ir ao estado 63
    expMul        ir ao estado 64
    expUn         ir ao estado 65
    element       ir ao estado 66
    ret           ir ao estado 67


Estado 33

   10 function: funcDecl ABRE_P $@1 parameters FECHA_P • $@2 ABRE_C moreStmt FECHA_C

    ABRE_C  reduzir usando a regra 9 ($@2)

    $@2  ir ao estado 72


Estado 34

   32 stmt: error •

    error           reduzir usando a regra 32 (stmt)
    IF              reduzir usando a regra 32 (stmt)
    FOR             reduzir usando a regra 32 (stmt)
    RETURN          reduzir usando a regra 32 (stmt)
    TIPO            reduzir usando a regra 32 (stmt)
    ENTRADA         reduzir usando a regra 32 (stmt)
    SAIDA           reduzir usando a regra 32 (stmt)
    LIST_OP_UN      reduzir usando a regra 32 (stmt)
    LIST_OP_HEADER  reduzir usando a regra 32 (stmt)
    ARIT_OP_MENOS   reduzir usando a regra 32 (stmt)
    LOG_OP_NEG      reduzir usando a regra 32 (stmt)
    CONST_INT       reduzir usando a regra 32 (stmt)
    CONST_FLOAT     reduzir usando a regra 32 (stmt)
    NIL             reduzir usando a regra 32 (stmt)
    ID              reduzir usando a regra 32 (stmt)
    ABRE_P          reduzir usando a regra 32 (stmt)
    ABRE_C          reduzir usando a regra 32 (stmt)
    FECHA_C         reduzir usando a regra 32 (stmt)


Estado 35

   33 conditional: IF • ABRE_P attribuition FECHA_P bracesOrNot
   34            | IF • ABRE_P attribuition FECHA_P bracesOrNot ELSE bracesOrNot
   35            | IF • ABRE_P error FECHA_P bracesOrNot

    ABRE_P  deslocar, e ir ao estado 73


Estado 36

   38 iteration: FOR • ABRE_P iteArgs FECHA_P bracesOrNot
   40          | FOR • ABRE_P error $@7 FECHA_P bracesOrNot

    ABRE_P  deslocar, e ir ao estado 74


Estado 37

   83 ret: RETURN • expLogic

    LIST_OP_UN      deslocar, e ir ao estado 40
    LIST_OP_HEADER  deslocar, e ir ao estado 41
    ARIT_OP_MENOS   deslocar, e ir ao estado 42
    LOG_OP_NEG      deslocar, e ir ao estado 43
    CONST_INT       deslocar, e ir ao estado 44
    CONST_FLOAT     deslocar, e ir ao estado 45
    NIL             deslocar, e ir ao estado 46
    ID              deslocar, e ir ao estado 75
    ABRE_P          deslocar, e ir ao estado 48

    expLogic  ir ao estado 76
    andLogic  ir ao estado 59
    expComp   ir ao estado 60
    expRel    ir ao estado 61
    expList   ir ao estado 62
    expArit   ir ao estado 63
    expMul    ir ao estado 64
    expUn     ir ao estado 65
    element   ir ao estado 66


Estado 38

   44 io: ENTRADA • ABRE_P ID FECHA_P
   47   | ENTRADA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 77


Estado 39

   45 io: SAIDA • ABRE_P expLogic FECHA_P
   46   | SAIDA • ABRE_P STRING FECHA_P
   48   | SAIDA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 78


Estado 40

   71 expUn: LIST_OP_UN • element

    CONST_INT    deslocar, e ir ao estado 44
    CONST_FLOAT  deslocar, e ir ao estado 45
    NIL          deslocar, e ir ao estado 46
    ID           deslocar, e ir ao estado 75
    ABRE_P       deslocar, e ir ao estado 48

    element  ir ao estado 79


Estado 41

   72 expUn: LIST_OP_HEADER • element

    CONST_INT    deslocar, e ir ao estado 44
    CONST_FLOAT  deslocar, e ir ao estado 45
    NIL          deslocar, e ir ao estado 46
    ID           deslocar, e ir ao estado 75
    ABRE_P       deslocar, e ir ao estado 48

    element  ir ao estado 80


Estado 42

   70 expUn: ARIT_OP_MENOS • element

    CONST_INT    deslocar, e ir ao estado 44
    CONST_FLOAT  deslocar, e ir ao estado 45
    NIL          deslocar, e ir ao estado 46
    ID           deslocar, e ir ao estado 75
    ABRE_P       deslocar, e ir ao estado 48

    element  ir ao estado 81


Estado 43

   69 expUn: LOG_OP_NEG • element

    CONST_INT    deslocar, e ir ao estado 44
    CONST_FLOAT  deslocar, e ir ao estado 45
    NIL          deslocar, e ir ao estado 46
    ID           deslocar, e ir ao estado 75
    ABRE_P       deslocar, e ir ao estado 48

    element  ir ao estado 82


Estado 44

   78 element: CONST_INT •

    PV                  reduzir usando a regra 78 (element)
    LOG_OP_OU           reduzir usando a regra 78 (element)
    LOG_OP_E            reduzir usando a regra 78 (element)
    REL_OP_BAIXA        reduzir usando a regra 78 (element)
    REL_OP_ALTA         reduzir usando a regra 78 (element)
    LIST_OP_BIN         reduzir usando a regra 78 (element)
    LIST_OP_CONSTRUTOR  reduzir usando a regra 78 (element)
    ARIT_OP_MAIS        reduzir usando a regra 78 (element)
    ARIT_OP_MENOS       reduzir usando a regra 78 (element)
    ARIT_OP_ALTA        reduzir usando a regra 78 (element)


Estado 45

   79 element: CONST_FLOAT •

    PV                  reduzir usando a regra 79 (element)
    LOG_OP_OU           reduzir usando a regra 79 (element)
    LOG_OP_E            reduzir usando a regra 79 (element)
    REL_OP_BAIXA        reduzir usando a regra 79 (element)
    REL_OP_ALTA         reduzir usando a regra 79 (element)
    LIST_OP_BIN         reduzir usando a regra 79 (element)
    LIST_OP_CONSTRUTOR  reduzir usando a regra 79 (element)
    ARIT_OP_MAIS        reduzir usando a regra 79 (element)
    ARIT_OP_MENOS       reduzir usando a regra 79 (element)
    ARIT_OP_ALTA        reduzir usando a regra 79 (element)


Estado 46

   80 element: NIL •

    PV                  reduzir usando a regra 80 (element)
    LOG_OP_OU           reduzir usando a regra 80 (element)
    LOG_OP_E            reduzir usando a regra 80 (element)
    REL_OP_BAIXA        reduzir usando a regra 80 (element)
    REL_OP_ALTA         reduzir usando a regra 80 (element)
    LIST_OP_BIN         reduzir usando a regra 80 (element)
    LIST_OP_CONSTRUTOR  reduzir usando a regra 80 (element)
    ARIT_OP_MAIS        reduzir usando a regra 80 (element)
    ARIT_OP_MENOS       reduzir usando a regra 80 (element)
    ARIT_OP_ALTA        reduzir usando a regra 80 (element)


Estado 47

   51 attribuition: ID • ATRIB expLogic
   74 element: ID •
   76        | ID • ABRE_P arguments FECHA_P
   77        | ID • ABRE_P FECHA_P

    ATRIB   deslocar, e ir ao estado 83
    ABRE_P  deslocar, e ir ao estado 84

    PV                  reduzir usando a regra 74 (element)
    LOG_OP_OU           reduzir usando a regra 74 (element)
    LOG_OP_E            reduzir usando a regra 74 (element)
    REL_OP_BAIXA        reduzir usando a regra 74 (element)
    REL_OP_ALTA         reduzir usando a regra 74 (element)
    LIST_OP_BIN         reduzir usando a regra 74 (element)
    LIST_OP_CONSTRUTOR  reduzir usando a regra 74 (element)
    ARIT_OP_MAIS        reduzir usando a regra 74 (element)
    ARIT_OP_MENOS       reduzir usando a regra 74 (element)
    ARIT_OP_ALTA        reduzir usando a regra 74 (element)


Estado 48

   75 element: ABRE_P • expLogic FECHA_P

    LIST_OP_UN      deslocar, e ir ao estado 163
    LIST_OP_HEADER  deslocar, e ir ao estado 164
    ARIT_OP_MENOS   deslocar, e ir ao estado 165
    LOG_OP_NEG      deslocar, e ir ao estado 166
    CONST_INT       deslocar, e ir ao estado 167
    CONST_FLOAT     deslocar, e ir ao estado 168
    NIL             deslocar, e ir ao estado 169
    ID              deslocar, e ir ao estado 170
    ABRE_P          deslocar, e ir ao estado 171

    expLogic  ir ao estado 85
    andLogic  ir ao estado 172
    expComp   ir ao estado 173
    expRel    ir ao estado 174
    expList   ir ao estado 175
    expArit   ir ao estado 176
    expMul    ir ao estado 177
    expUn     ir ao estado 178
    element   ir ao estado 179


Estado 49

   26 block: ABRE_C • moreStmt FECHA_C

    error           deslocar, e ir ao estado 34
    IF              deslocar, e ir ao estado 35
    FOR             deslocar, e ir ao estado 36
    RETURN          deslocar, e ir ao estado 37
    TIPO            deslocar, e ir ao estado 162
    ENTRADA         deslocar, e ir ao estado 38
    SAIDA           deslocar, e ir ao estado 39
    LIST_OP_UN      deslocar, e ir ao estado 40
    LIST_OP_HEADER  deslocar, e ir ao estado 41
    ARIT_OP_MENOS   deslocar, e ir ao estado 42
    LOG_OP_NEG      deslocar, e ir ao estado 43
    CONST_INT       deslocar, e ir ao estado 44
    CONST_FLOAT     deslocar, e ir ao estado 45
    NIL             deslocar, e ir ao estado 46
    ID              deslocar, e ir ao estado 47
    ABRE_P          deslocar, e ir ao estado 48
    ABRE_C          deslocar, e ir ao estado 49

    moreStmt      ir ao estado 86
    block         ir ao estado 51
    stmt          ir ao estado 52
    conditional   ir ao estado 53
    iteration     ir ao estado 54
    io            ir ao estado 55
    varDecl       ir ao estado 56
    attribuition  ir ao estado 57
    expLogic      ir ao estado 58
    andLogic      ir ao estado 59
    expComp       ir ao estado 60
    expRel        ir ao estado 61
    expList       ir ao estado 62
    expArit       ir ao estado 63
    expMul        ir ao estado 64
    expUn         ir ao estado 65
    element       ir ao estado 66
    ret           ir ao estado 67


Estado 50

   17 function: error ABRE_P FECHA_P $@6 ABRE_C moreStmt • FECHA_C
   22 moreStmt: moreStmt • block

    error           deslocar, e ir ao estado 34
    IF              deslocar, e ir ao estado 35
    FOR             deslocar, e ir ao estado 36
    RETURN          deslocar, e ir ao estado 37
    TIPO            deslocar, e ir ao estado 162
    ENTRADA         deslocar, e ir ao estado 38
    SAIDA           deslocar, e ir ao estado 39
    LIST_OP_UN      deslocar, e ir ao estado 40
    LIST_OP_HEADER  deslocar, e ir ao estado 41
    ARIT_OP_MENOS   deslocar, e ir ao estado 42
    LOG_OP_NEG      deslocar, e ir ao estado 43
    CONST_INT       deslocar, e ir ao estado 44
    CONST_FLOAT     deslocar, e ir ao estado 45
    NIL             deslocar, e ir ao estado 46
    ID              deslocar, e ir ao estado 47
    ABRE_P          deslocar, e ir ao estado 48
    ABRE_C          deslocar, e ir ao estado 49
    FECHA_C         deslocar, e ir ao estado 87

    block         ir ao estado 88
    stmt          ir ao estado 52
    conditional   ir ao estado 53
    iteration     ir ao estado 54
    io            ir ao estado 55
    varDecl       ir ao estado 56
    attribuition  ir ao estado 57
    expLogic      ir ao estado 58
    andLogic      ir ao estado 59
    expComp       ir ao estado 60
    expRel        ir ao estado 61
    expList       ir ao estado 62
    expArit       ir ao estado 63
    expMul        ir ao estado 64
    expUn         ir ao estado 65
    element       ir ao estado 66
    ret           ir ao estado 67


Estado 51

   23 moreStmt: block •

    error           reduzir usando a regra 23 (moreStmt)
    IF              reduzir usando a regra 23 (moreStmt)
    FOR             reduzir usando a regra 23 (moreStmt)
    RETURN          reduzir usando a regra 23 (moreStmt)
    TIPO            reduzir usando a regra 23 (moreStmt)
    ENTRADA         reduzir usando a regra 23 (moreStmt)
    SAIDA           reduzir usando a regra 23 (moreStmt)
    LIST_OP_UN      reduzir usando a regra 23 (moreStmt)
    LIST_OP_HEADER  reduzir usando a regra 23 (moreStmt)
    ARIT_OP_MENOS   reduzir usando a regra 23 (moreStmt)
    LOG_OP_NEG      reduzir usando a regra 23 (moreStmt)
    CONST_INT       reduzir usando a regra 23 (moreStmt)
    CONST_FLOAT     reduzir usando a regra 23 (moreStmt)
    NIL             reduzir usando a regra 23 (moreStmt)
    ID              reduzir usando a regra 23 (moreStmt)
    ABRE_P          reduzir usando a regra 23 (moreStmt)
    ABRE_C          reduzir usando a regra 23 (moreStmt)
    FECHA_C         reduzir usando a regra 23 (moreStmt)


Estado 52

   24 block: stmt •

    error           reduzir usando a regra 24 (block)
    IF              reduzir usando a regra 24 (block)
    FOR             reduzir usando a regra 24 (block)
    RETURN          reduzir usando a regra 24 (block)
    TIPO            reduzir usando a regra 24 (block)
    ENTRADA         reduzir usando a regra 24 (block)
    SAIDA           reduzir usando a regra 24 (block)
    LIST_OP_UN      reduzir usando a regra 24 (block)
    LIST_OP_HEADER  reduzir usando a regra 24 (block)
    ARIT_OP_MENOS   reduzir usando a regra 24 (block)
    LOG_OP_NEG      reduzir usando a regra 24 (block)
    CONST_INT       reduzir usando a regra 24 (block)
    CONST_FLOAT     reduzir usando a regra 24 (block)
    NIL             reduzir usando a regra 24 (block)
    ID              reduzir usando a regra 24 (block)
    ABRE_P          reduzir usando a regra 24 (block)
    ABRE_C          reduzir usando a regra 24 (block)
    FECHA_C         reduzir usando a regra 24 (block)


Estado 53

   27 stmt: conditional •

    error           reduzir usando a regra 27 (stmt)
    IF              reduzir usando a regra 27 (stmt)
    FOR             reduzir usando a regra 27 (stmt)
    RETURN          reduzir usando a regra 27 (stmt)
    TIPO            reduzir usando a regra 27 (stmt)
    ENTRADA         reduzir usando a regra 27 (stmt)
    SAIDA           reduzir usando a regra 27 (stmt)
    LIST_OP_UN      reduzir usando a regra 27 (stmt)
    LIST_OP_HEADER  reduzir usando a regra 27 (stmt)
    ARIT_OP_MENOS   reduzir usando a regra 27 (stmt)
    LOG_OP_NEG      reduzir usando a regra 27 (stmt)
    CONST_INT       reduzir usando a regra 27 (stmt)
    CONST_FLOAT     reduzir usando a regra 27 (stmt)
    NIL             reduzir usando a regra 27 (stmt)
    ID              reduzir usando a regra 27 (stmt)
    ABRE_P          reduzir usando a regra 27 (stmt)
    ABRE_C          reduzir usando a regra 27 (stmt)
    FECHA_C         reduzir usando a regra 27 (stmt)


Estado 54

   28 stmt: iteration •
